--- a/js/slick-theme.css
+++ b/js/slick-theme.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    background: #fff center center no-repeat;
 }
 @font-face {
     font-family: SFD;
@@ -29,7 +29,7 @@
     border: none;
     outline: none;
     background: transparent;
-    background: url("./img/icons/left_circle_arrow_2.svg") no-repeat;
+    background: url("../img/icons/left_circle_arrow_2.svg") no-repeat;
     background-position: center;
     background-size: contain;
     width: 30px !important;
@@ -52,7 +52,7 @@
     border: none;
     outline: none;
     background: transparent;
-    background: url("./img/icons/right_circle_arrow_2.svg") no-repeat;
+    background: url("../img/icons/right_circle_arrow_2.svg") no-repeat;
     background-position: center;
     background-size: contain;
     width: 30px !important;
