--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -3,16 +3,7 @@
     .menu__list{
         display: flex;
         align-items: center;
-    }
-    .menu__list > li {
-        padding: 10px 0;
-    }
-    .menu__sub-list{
-        transform: translate(0px, 10%);
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-        transition: all 0.3s ease 0s;
+        line-height: 65px;
     }
 }
 @media (max-width: 1279px){
