--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ body._touch .menu__arrow{
     height: 5px;
 }
 body._touch .menu__sub-list{
-    min-width: auto;
+    min-width: 100%;
 }
 body._touch .menu__link{
     flex: 1 1 auto;
