--- a/css/style.css
+++ b/css/style.css
@@ -753,3 +753,94 @@ ul {
     border: 1px solid #ccc !important; 
 }
 
+
+
+
+.topnav{
+}
+.topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 14px;
+}
+.active {
+    background-color: #04AA6D;
+    color: white;
+}
+.topnav .icon {
+    display: none;
+}
+  .menu_drop {
+    float: left;
+    overflow: hidden;
+  }
+  .menu_drop .dropbtn {
+    font-size: 14px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .menu_drop_content{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .menu_drop_content a{
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav a:hover, .menu_drop:hover .dropbtn {
+    background-color: black;
+    color: white;
+  }
+  .menu_drop_content a:hover {
+    background-color: black;
+    color: white;
+  }
+  .menu_drop:hover .menu_drop_content {
+    display: block;
+  }
+ @media screen and (max-width: 767px) {
+    .topnav a:not(:first-child), .menu_drop .dropbtn {
+      display: none;
+    }
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+ @media screen and (max-width: 767px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .menu_drop {float: none;}
+    .topnav.responsive .menu_drop_content {position: relative;}
+    .topnav.responsive .menu_drop .dropbtn {
+      display: block;
+      width: 100%;
+      text-align: left;
+    }
+  }
