--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -5,6 +5,14 @@
         align-items: center;
         line-height: 65px;
     }
+    .menu__sub-list{
+        transform: translate(0px, 10%);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: all 0.3s ease 0s;
+        line-height: 40px;
+    }
 }
 @media (max-width: 1279px){
     .block-news{
@@ -67,6 +75,7 @@
         left: 0;
         transform: translateY(-100%);
         width: 100%;
+        height: 100vh;
         background: #fff;
         padding: 100px 30px 20px 20px;
         transition: all 0.5s ease 0.1s;
