--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,6 @@ a.menu__link:hover{
 
 .menu__sub-list{
     line-height: 35px;
-    display: none;
     white-space: nowrap;
     position: absolute;
     top: 100%;
@@ -223,10 +222,17 @@ a.menu__link:hover{
 body._lock{
     overflow: hidden;
 }
+body._pc .menu__list > li:hover .menu__sub-list {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0px, 0px);
+    pointer-events: all
+}
 body._pc .menu__list > li:hover .menu__link{
     border-bottom: 1px solid hsla(225, 88%, 58%, 0.6);
     color: #3462f2;
 }
+
 body._touch .block__visual{
     display: none;
 }
@@ -756,14 +762,14 @@ ul {
 
 
 
-.topnav{
-}
+
 .topnav a {
     float: left;
     display: block;
     color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0 15px;
+    line-height: 65px;
     text-decoration: none;
     font-size: 14px;
 }
@@ -783,10 +789,12 @@ ul {
     border: none;
     outline: none;
     color: black;
-    padding: 14px 16px;
+    padding: 0 15px;
+    line-height: 65px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
+    white-space: nowrap;
   }
   .menu_drop_content{
     display: none;
@@ -799,7 +807,7 @@ ul {
   .menu_drop_content a{
     float: none;
     color: black;
-    padding: 12px 16px;
+    line-height: 40px;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -816,7 +824,7 @@ ul {
     display: block;
   }
  @media screen and (max-width: 767px) {
-    .topnav a:not(:first-child), .menu_drop .dropbtn {
+    .topnav a, .menu_drop .dropbtn {
       display: none;
     }
     .topnav a.icon {
@@ -825,7 +833,17 @@ ul {
     }
   }
  @media screen and (max-width: 767px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+      position: absolute;
+      background: white;
+      background-size: contain;
+      right: 0;
+      top: 0;
+      width: 100%;
+      height: 100vh;
+      overflow: auto;
+      z-index: 9999;
+    }
     .topnav.responsive a.icon {
       position: absolute;
       right: 0;
@@ -835,9 +853,14 @@ ul {
       float: none;
       display: block;
       text-align: left;
+      padding-top: 100px;
     }
-    .topnav.responsive .menu_drop {float: none;}
-    .topnav.responsive .menu_drop_content {position: relative;}
+    .topnav.responsive .menu_drop {
+        float: none;
+    }
+    .topnav.responsive .menu_drop_content {
+        position: relative;
+    }
     .topnav.responsive .menu_drop .dropbtn {
       display: block;
       width: 100%;
