--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -15,6 +15,9 @@
     }
 }
 @media (max-width: 1279px){
+    .block__visual{
+        display: none;
+    }
     .block-news{
         margin-top: 60px;
     }
@@ -29,6 +32,9 @@
     }
     .menu__sub-list > li{
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    .menu__sub-list li:last-child{
+        border-radius: 0px !important;
     }
     .menu__sub-list{
         border: none;
@@ -77,7 +83,7 @@
         width: 100%;
         height: 100vh;
         background: #fff;
-        padding: 100px 30px 20px 20px;
+        padding: 100px 0 20px 0;
         transition: all 0.5s ease 0.1s;
         overflow: auto;
         margin-left: 0;
@@ -87,6 +93,9 @@
         width: 100%;
         overflow: auto;
         z-index: 3;
+    }
+    .menu__body li{
+        padding: 0 30px 0 15px;
     }
     .menu__body._active{
         transform: translateY(0%);
