--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ main{
 }
 /*------------- BLOCK VISUAL IMPAIRED ---------------*/
 .logo-visual{
+    display: flex;
     align-items: center;
     text-decoration: none;
     line-height: 1.2;
@@ -156,9 +157,6 @@ main{
 .menu__list > li {
     position: relative;
 }
-.menu__list li:first-child{
-    margin: 0;
-}
 .menu__link{
     font-weight: 500;
 	font-size: 14px;
@@ -168,7 +166,7 @@ main{
     padding: 0 5px;
 }
 .menu__link:hover{
-    border-bottom: 1px solid black;
+    
 }
 a.menu__link:hover{
     color: black;
@@ -228,6 +226,12 @@ body._pc .menu__list > li:hover .menu__sub-list {
     transform: translate(0px, 0px);
     pointer-events: all
 }
+body._pc .logo-visual:hover .menu__sub-list {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0px, 0px);
+    pointer-events: all
+}
 body._pc .menu__list > li:hover .menu__link{
     border-bottom: 1px solid hsla(225, 88%, 58%, 0.6);
     color: #3462f2;
@@ -243,8 +247,10 @@ body._touch .menu__list > li{
 body._touch .menu__arrow{
     display: block;
     background: url("../img/icons/arrow_down.svg");
-    width: 5px;
-    height: 5px;
+    width: 8px;
+    height: 35px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 body._touch .menu__sub-list{
     min-width: 100%;
@@ -263,10 +269,10 @@ body._touch .menu__list > li._active .menu__sub-list {
     visibility: visible;
     transform: translate(0px, 0px);
     pointer-events: all;
-    margin-bottom: 1rem;
+    margin-bottom: 15px;
 }
 body._touch .menu__list > li._active .menu__sub-list li:last-child{
-    margin-bottom: 1rem;
+    margin-bottom: 15px;
 }
 body._touch .menu__list > li._active .menu__arrow{
     transform: rotate(-180deg);
