--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,18 @@
     filter: grayscale(1);
 }
 .link_active a{
-    font-weight: bold;
+    font-weight: bold !important;
     color: black;
 }
 .link_active:hover a{
+    font-weight: bolder !important;
+    color: #3462f2 !important;
+}
+.link_active{
+    font-weight: bold !important;
+    color: black;
+}
+.link_active:hover{
     font-weight: bolder !important;
     color: #3462f2 !important;
 }
@@ -24,6 +32,10 @@ body{
     background: #fbfbfd !important;
     font-family: Manpore_font !important;
     overflow-x: hidden;  
+    width: 100%;
+    height: 100%;
+    background-color: #fbfbfd;
+    margin: 0;
 }
 a {
 	text-decoration: none;
@@ -282,12 +294,6 @@ body._touch .menu__list > li._active .menu__arrow{
 }
 
 /*--------------------MAIN CONTAINER-----------------*/
-.main__container{
-    width: 100%;
-    height: 100%;
-    background-color: #fbfbfd;
-    margin: 0;
-}
 .slider-top{
     width: 100%;
     padding-bottom: 20px;
@@ -774,112 +780,3 @@ ul {
     background-color: ghostwhite !important;
     border: 1px solid #ccc !important; 
 }
-
-
-
-
-
-.topnav a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 0 15px;
-    line-height: 65px;
-    text-decoration: none;
-    font-size: 14px;
-}
-.active {
-    background-color: #04AA6D;
-    color: white;
-}
-.topnav .icon {
-    display: none;
-}
-  .menu_drop {
-    float: left;
-    overflow: hidden;
-  }
-  .menu_drop .dropbtn {
-    font-size: 14px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 0 15px;
-    line-height: 65px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    white-space: nowrap;
-  }
-  .menu_drop_content{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  .menu_drop_content a{
-    float: none;
-    color: black;
-    line-height: 40px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav a:hover, .menu_drop:hover .dropbtn {
-    background-color: black;
-    color: white;
-  }
-  .menu_drop_content a:hover {
-    background-color: black;
-    color: white;
-  }
-  .menu_drop:hover .menu_drop_content {
-    display: block;
-  }
- @media screen and (max-width: 767px) {
-    .topnav a, .menu_drop .dropbtn {
-      display: none;
-    }
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
- @media screen and (max-width: 767px) {
-    .topnav.responsive {
-      position: absolute;
-      background: white;
-      background-size: contain;
-      right: 0;
-      top: 0;
-      width: 100%;
-      height: 100vh;
-      overflow: auto;
-      z-index: 9999;
-    }
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-      padding-top: 100px;
-    }
-    .topnav.responsive .menu_drop {
-        float: none;
-    }
-    .topnav.responsive .menu_drop_content {
-        position: relative;
-    }
-    .topnav.responsive .menu_drop .dropbtn {
-      display: block;
-      width: 100%;
-      text-align: left;
-    }
-  }
