--- a/css/order.css
+++ b/css/order.css
@@ -2,6 +2,9 @@ p{
     margin: 0 !important;
     padding: 0 !important;
 }
+button{
+    outline: 0 !important;
+}
 .top_container{
     max-width: 1840px;
     margin: 0 auto;
@@ -17,14 +20,11 @@ p{
     font-weight: 600;
 }
 .order_container{
-    padding-top: 110px;
+    padding: 110px 0;
 }
 .order_container_white{
-    padding-top: 110px;
+    padding: 110px 0;
     background: white;
-}
-.button_row{
-    padding: 0 0 110px 0;
 }
 .button_row div{
     display: flex;
@@ -57,6 +57,9 @@ p{
 .text-gosulugi p{
     padding-bottom: 55px !important;
 }
+.text-gosulugi div p:first-child{
+    padding-bottom: 0 !important;
+}
 .text-gosulugi span{
     font-size: 24px;
     font-weight: 600;
@@ -87,7 +90,9 @@ p{
     color: black;
 }
 .btn-gosuslugi:focus{
-    border: 1px solid rgb(37, 146, 235);
+    background: -webkit-linear-gradient(90deg, rgb(37, 146, 235), rgb(88, 133, 237));
+    background: -moz-linear-gradient(90deg, rgb(37, 146, 235), rgb(88, 133, 237));
+    background: linear-gradient(90deg, rgb(37, 146, 235), rgb(88, 133, 237));
     background: white;
     color: rgb(37, 146, 235);
 }
@@ -119,4 +124,31 @@ p{
     background-position: center;
     margin: 0 15px 55px 15px;
     display: none;
+}
+
+
+.info_hidden_row{
+    display: none;
+    max-width: 1640px;
+    margin: 55px auto 0 auto !important;
+}
+.info_hidden_table{
+    background: white;
+    padding: 15px 20px;
+    border: 1px solid rgb(0,0,0,0.6);
+    border-radius: 10px;
+    -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
+}
+.info_hidden_header{
+    font-size: 24px;
+    font-weight: 600;
+    padding-bottom: 55px !important;
+}
+.info_ul{
+    line-height: 30px;
+    font-size: 16px;
+    list-style: circle;
+    list-style-position: inside;
 }
