--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,6 @@ main{
     z-index: 9999;
     background-color: rgba(255, 255, 255, 0.90);
     box-shadow: 0 0 10px rgba(0,0,0,.1);
-    border-bottom: 1px solid rgba(0,0,0,0.16);
     backdrop-filter: blur(1.25rem);
 }
 .name__mobile{
@@ -242,11 +241,21 @@ body._pc .logo-visual:hover .menu__sub-list {
     opacity: 1;
     visibility: visible;
     transform: translate(0px, 0px);
-    pointer-events: all
+    pointer-events: all;
 }
 body._pc .menu__list > li:hover .menu__link{
     border-bottom: 1px solid hsla(225, 88%, 58%, 0.6);
     color: #3462f2;
+    cursor: progress;
+}
+body._pc .menu__list > li .menu__link:focus{
+    border-bottom: 1px solid hsla(225, 88%, 58%, 0.6);
+    color: #3462f2;
+    font-weight: bold;
+    text-decoration: none;
+}
+body._pc .logo-visual:hover{
+    cursor: pointer;
 }
 
 body._touch .block__visual{
