--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ a:hover {
 }
 header{
     width: 100%;
-    height: 65px;
+    height: 70px;
     padding-top: 0px;
 }
 img{
@@ -99,8 +99,14 @@ main{
 .block__logo{
     z-index: 9999;
 }
+.block__logo:focus-visible{
+    outline: none;
+}
+.logo-visual:focus-visible{
+    outline: none;
+}
 .logo img{
-    max-height: 65px;
+    min-height: 70px;
     object-fit: contain;
     object-position: left;
 }
@@ -113,7 +119,7 @@ main{
     line-height: 1.2;
     margin: 0;
     padding: 20px 0;
-    max-height: 65px;
+    max-height: 70px;
 }
 .logo-visual span{
     font-size: 14px;
@@ -162,7 +168,7 @@ main{
     height: 100%;
 }
 .menu__body{
-    height: 65px;
+    height: 70px;
     display: flex;
 }
 .menu__icon{
@@ -451,6 +457,9 @@ body._touch .sliderban_1 .slick-arrow{
     font-size: 24px;
     font-weight: bold;
 }
+._split span{
+    margin-left: 0 !important;
+}
 .uslugi{
     margin-top: 60px;
 }
@@ -547,13 +556,28 @@ div.map-container {
     border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 .news-column-item{
-    line-height: 1.6;
-    letter-spacing: .03em;
+    line-height: 1.5;
+    letter-spacing: 1px;
     margin: 20px 0 20px 20px;
     text-align: justify;
 }
+.news-column-title{
+    font-size: 16px;
+    color: #3462f2;
+}
+.news-column-item a:hover{
+    color: #3462f2;
+    border-bottom: 1px solid hsla(225, 88%, 58%, 0.5)
+}
+.news-column-item a:focus{
+    color: #3462f2;
+    font-weight: 600;
+    text-decoration: none !important;
+}
+
+
 .news-column-date{
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 400;
     letter-spacing: .05em;
     color: #8d8d94;
@@ -575,16 +599,17 @@ div.but-div{
     margin: 0 auto;
 }
 .uslugi-btn{
-    margin-top: 1rem;
+    margin-top: 20px;
+    padding: 0 30px 0 30px !important;
 }
 img.btn-img{
-    height: 200px;
+    height: 180px;
     display: block;
     margin: 0 auto;
 }
 div.clearfix p{
     padding: 0 5px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
 }
 .uslugi_img_1{
